# OlimpiadiSquadre2019

./: .gitignore  LICENSE  README.md
round1/project/: CMakeLists.txt
round1/project/src/23/: README.md  main.cpp
round1/project/src/blindpunch/: README.md  main.cpp
round1/project/src/butoaie/: README.md  main.cpp
round1/project/src/fibonaccibug/: README.md  main.cpp
round1/project/src/funnygraph/: README.md  main.cpp
round1/project/src/grades/: README.md  main.cpp
round1/project/src/smartphone/: README.md  main.cpp
round1/project/src/sprei/: README.md
round1/project/src/teleport2/: README.md  main.cpp
