cmake_minimum_required(VERSION 3.4)

project(OlimpiadiSquadre)

include_directories(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/src)

add_executable(23 src/23/main.cpp)
add_executable(blindpunch src/blindpunch/main.cpp)
add_executable(butoaie src/butoaie/main.cpp)
add_executable(fibonaccibug src/fibonaccibug/main.cpp)
add_executable(funnygraph src/funnygraph/main.cpp)
add_executable(grades src/grades/main.cpp)
add_executable(smartphone src/smartphone/main.cpp)
add_executable(sprei src/sprei/main.cpp)
add_executable(teleport2 src/teleport2/main.cpp)
